# kth-dd2610-project

./: .gitignore  README.md  fsq_test_implementation.ipynb  pyproject.toml
src/: fsq-vae.ipynb  inference.py  inference2.py  inference_bestversion.py  layers.py  losses.py  mask_schedule.py  maskgit_class_cond_config.py  maskgit_transformers.py  parallell_decode.py  parse2.py  parser.py  temp.py  train.py  working_maskgit_train.py
