[project]
name = "kth-dd2610-project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Lukas Friman", email = "lukasfri@kth.se" }]
dependencies = [
    "ipykernel>=7.1.0",
    "jax[cuda13]>=0.8.1",
    "flax>=0.12.1",
    "datasets>=4.3.0",
    "Pillow>=12.0.0",
    "grain>=0.2.15",
    "matplotlib>=3.10.7",
    "orbax>=0.1.9",
    "array-record>=0.8.2",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }
